--- a/Battle/views/index.erb
+++ b/Battle/views/index.erb
@@ -1,3 +1,8 @@
-<div>
-    <h1> Hello Battle  ></h1>
-</div>
+<h1>BATTLE!!</h1>
+<form action="/names" method="post">
+  <label for="name1">Player 1</label>
+  <input type="text" name="name1">
+  <label for="name2">Player 2</label>
+    <input type="text" name="name2">
+    <input type="submit" value="Submit!">
+    </form>
