WIP calculating birthday countdown

--- a/Birthday/views/happy_birthday_name.erb
+++ b/Birthday/views/happy_birthday_name.erb
@@ -1,8 +1,10 @@
 <html>
+<form>
 <body>
   <body style="background-color:powderblue;">
 <div>
-  <form action="/happy_birthday">
+
     <h1>Happy Birthday <%=@name%> !</h1>
 
 </div>
+<h1>Your birthday will be in <%countdown_time %> days !</h1>
