--- a/Birthday/views/index.erb
+++ b/Birthday/views/index.erb
@@ -2,36 +2,42 @@
 <body>
   <body style="background-color:powderblue;">
 <div>
-    <h1> Hello There </h1>
+  <br>
+    <br>
+      <br>
+    <h1> Hello There !</h1>
 </div>
-<br>
-<br>
-<br>
-<form>
-  <p> What's your name? </p>
-    <input type="text" What's your name="name" value="Tameka">
-
-    <p>day:</p>
-<input type="text" name="day" value="1">
-<p>month:</p>
+  <br>
+    <br>
+      <br>
+  <form action="/happy_birthday" method="post">
+  <h2> What's your name? </h2>
+  <input type="text" What's your name="name" value="name">
+  <br>
+    <br>
+      <br>
+  <h2> When's your birthday? </h2>
+  <p>day:</p>
+  <input type="text" name="day" value="day">
+  <p>month:</p>
   <select name="month">
-    <option value="January">January</option>
-    <option value="February">February</option>
-    <option value="March">March</option>
-    <option value="April">April</option>
-    <option value="May">May</option>
-    <option value="June">June</option>
-    <option value="July">July</option>
-    <option value="August">August</option>
-    <option value="September">September</option>
-    <option value="October">October</option>
-    <option value="November">November</option>
-    <option value="December">December</option>
+    <option value="1">January</option>
+    <option value="2">February</option>
+    <option value="3">March</option>
+    <option value="4">April</option>
+    <option value="5">May</option>
+    <option value="6">June</option>
+    <option value="7">July</option>
+    <option value="8">August</option>
+    <option value="9">September</option>
+    <option value="10">October</option>
+    <option value="11">November</option>
+    <option value="12">December</option>
   </select>
   <br>
     <br>
       <br>
-<input type="submit" value="GO!">
-</form
-</body>
-</html>
+  <input type="submit" value="GO!">
+  </form>
+  </body>
+  </html>
